:bricks: ci: modificação no Dockerfile para o Java 24